--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         onTransactionReceived(sender, value, fee) {
-            console.log('transaction received from', sender, 'tx-value:', value, 'fees payed', fees)
+            console.log('transaction received from', sender, 'tx-value:', value, 'fees payed', fee)
         }
 
         send() {
