--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         onBalanceChanged(balance) {
-            document.getElementById('balance').textContent = Math.round(balance / 1000000) / 100
+            document.getElementById('balance').textContent = Math.round(balance * 100) / 100
         }
 
         onTransactionReceived(sender, value, fee) {
@@ -25,7 +25,7 @@
             const $recipient = document.getElementById('recipient');
             const $value = document.getElementById('value');
             const fee = 10;
-            this.sendTransaction($recipient.value, value, fee);
+            this.sendTransaction($recipient.value, $value.value, fee);
             this.addToHistory(this.address, $recipient.value, $value.value, fee);
             $recipient.value = '';
             $value.value = '';
@@ -34,7 +34,7 @@
         addToHistory(sender, recipient, value, fee) {
             const history = document.getElementById('history');
             const $tx = document.createElement('div');
-            $tx.textContent = `From:\t${sender}\nTo:\t${recipient}\nValue: ${value}\nFee: ${fee}`;
+            $tx.textContent = `From: ${sender}\nTo: ${recipient}\nValue: ${value}\nFee: ${fee}`;
             history.appendChild($tx);
         }
     }
