Fix demo, add .gitignore

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <title>Most Simple Nimiq Wallet</title>
     <link rel="stylesheet" type="text/css" href="/fast-font/fast-font.css">
     <script src="https://cdn.nimiq.com/core/nimiq.js"></script>
-    <script src="nano-api.js"></script>
+    <script src="../nano-api.js"></script>
     <script>
     class MyNimiqApi extends NanoApi {
 
