Complete use of es6 and css imports

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Most Simple Nimiq Wallet</title>
-    <link rel="stylesheet" type="text/css" href="/fast-font/fast-font.css">
+    <link href="/library/nimiq-style/nimiq-style.css" rel="stylesheet">
     <script src="https://cdn.nimiq.com/core/nimiq.js"></script>
     <script src="../nano-api.js"></script>
     <script>
