--- a/demo/index.html
+++ b/demo/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <title>Most Simple Nimiq Wallet</title>
-    <link href="/library/nimiq-style/nimiq-style.css" rel="stylesheet">
     <script src="https://cdn.nimiq.com/core/nimiq.js"></script>
-    <script src="../nano-api.js"></script>
-    <script>
+    <script type="module">
+    import NanoApi from '../nano-api.js';
     class MyNimiqApi extends NanoApi {
 
         onInitialized() {
