Small bug fixes

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@
             this.addToHistory(sender, this.address, value, fee);
         }
     }
-    const nimiq = new MyNimiqApi();
+    window.nimiq = new MyNimiqApi(true);
     </script>
 </head>
 
